# rechecks-stats

./: README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
rechecks_stats/: bare_rechecks.py  config.py  data_parser.py  gerrit.py  plotter.py  printer.py  rechecks.py  rechecks_reasons.py
tools/: get_average_for_each_repo.sh  get_rechecks_for_all_repos.sh
