[metadata]
name = rechecks-stats
summary = Simple tool to get data about failed builds and/or rechecks without reason done in the OpenStack projects
description_file =
    README.md
author = Slawek Kaplonski
author_email = slawek@kaplonski.pl
home_page = https://kaplonski.pl
python_requires = >=3.6
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[entry_points]
console_scripts =
    rechecks-stats = rechecks_stats.rechecks:main
    bare-rechecks = rechecks_stats.bare_rechecks:main
